scrollbar fix style

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -149,6 +149,19 @@ textarea {
   }
 }
 
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--oliveGrey);
+  // border-radius: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--creme);
+}
+
 #root,
 #__next {
   isolation: isolate;
